syntax = "proto3";
//import "google/protobuf/any.proto";
import "google/protobuf/timestamp.proto";

package skeduler;
option go_package = ".;backend";

service Backend {
  rpc Create(JobCreateRequest) returns (Job) {};
  rpc Get(GetJobRequest) returns (Job) {};
  rpc Update(UpdateJobRequest) returns (Job) {};
  rpc Logs(JobLogsRequest) returns (stream Chunk) {};
  rpc StreamLogs(JobLogsRequest) returns (stream Chunk) {};
}

message JobLogsRequest {
  string id = 1;
}

message Chunk {
  bytes Content = 1;
}

message UpdateJobRequest {
  string id = 1;
  string name = 2;
  string description = 3;
  JobStatus status = 4;
  //  google.protobuf.Any metadata = 4;
}

message GetJobRequest {
  string id = 1;
}

message JobCreateRequest {
  string name = 1;
  string description = 2;
  Docker docker = 3;
  //  google.protobuf.Any metadata = 4;
}

message Docker {
  string image = 1;
  string command = 2;
  map<string, string> environment = 3;
}

message Job {
  string id = 1;
  string name = 2;
  string description = 3;
  Docker docker = 4;
  google.protobuf.Timestamp created_at = 5;
  google.protobuf.Timestamp updated_at = 6;
  JobStatus status = 7;
  //  google.protobuf.Any metadata = 8;
}

enum JobStatus {
  ENQUEUED = 0;
  RUNNING = 1;
  FINISHED = 2;
  CANCELLED = 3;
}